Include the inline and block elements

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		-set the width of the viewport to the width if the device screen
 	-'initial-scale=1.0'
 		-initial zoom level of the viewport to 100%
-		-to create a mobile-friendly web pages that adapt to different screen sizes and resolutions to provide better user expirience 
+		-to create a mobile-friendly web pages that adapt to different screen sizes and resolutions to provide better user expirience.
 	--> 
 	
 	<title>HTMl tags and elements</title>
