--- a/index.html
+++ b/index.html
@@ -75,6 +75,66 @@
 <p>
 	Welcome to <em>CEU</em>! In this <strong>online course</strong>, you will learn a lot of things. Let's enumerate all the things that wil make us Software Engineering..
 </p>
+<!-- 
+	- these 
+	- hot reoad
+	- cold reload
+ -->
+ <h3>What we will learn in our Course</h3>
+ <!-- 
+		ul tags allow to create an unordered list. With this, we cam create list with items preceded by bullet points which shows itmes are in no particular order
+		li tags allow to create our lits item. List items are the elements that are children of either an unordered list or ordered lists
+		ol tags allow to create ordered list. With this, we create a list with itmes preceded by number by default
 
+		Nested elements are elements inside another elements
+
+		Parents elements- eleme
+  -->
 </body>
+<ul>
+	<li>languages</li>
+	<li>Frameworks and libraries</li>
+	<ol>
+		<li>Bootstrap</li>
+		<li>Angular</li>
+		<li>ReactsJS</li>
+	</ol>
+<li>Tools</li>
+<ol>
+	<li>Git</li>
+	<li>GitHub</li>
+	<li>SUblime<li>
+	<li>Postman<li>
+	<li>Google Chrome<li>
+	<li>Tools<li>
+		<ul>
+			<li></li>
+			<li></li>
+		</ul>
+</ol>
+</ul>
+<!-- Solution For mini Activity -->
+<hr>
+<h1>Adonica Villa</h1>
+<p>Hi, I'm Adonica and I'm a student and I want to learn more about web developer. I love creating beautiful and functional websites that provide a great user experience.</p>
+<h3>My Hobbies</h3>
+<ul>
+  <li>Watching</li>
+  <li>Reading</li>
+  <li>Hiking</li>
+</ul>
+<!-- 
+	Mini Activity- Submit image to canvas lecture..
+
+	after the unordered list 
+		add a horizontal rule
+		add the largest heading with your name 
+		add paragraph element with a short introduction of yourself (2-3 sentence)
+		Add the #rd Largest Heading: my Hobbies
+		Add adn unordered list and with list items for each of you hobbies.
+ -->
+ <!--
+  	Ctrl+shift+p - intall
+  	browser sync 
+  -->
 </html>		
