--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 		charset="utf-8"
 		-it tells the browser that this HTML documents will use the default character  set 
 		-charset is character set which specifies the encoding used to represent character in documents
-		-"UTF-8" a character encoding that can represent all possible character in Uicode standard
+		-"UTF-8" a character encoding that can represent all possible character in Uicode standard..
 	-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- 
 	name refers tp the attribute in HTML that can be used to specify the name of an element such as viewport
 
-	view port is a term used in web design to describe the visible area of a web page that is displayed on a device screen
+	view port is a term used in web design to describe the visible area of a web page that is displayed on a device screen.
 
 
 	content attribute specifies  two values 
@@ -134,7 +134,7 @@
 		Add adn unordered list and with list items for each of you hobbies.
  -->
  <!--
-  	Ctrl+shift+p - intall
+  	Ctrl+shift+p - install
   	browser sync 
   -->
 </html>		
